{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 0,
  "lineage": "24f266f5-7137-d7e4-d68d-b8881d9a3ccc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ai_sre_demo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bb3ee0009a3b005",
            "arn": "arn:aws:ec2:us-west-2:180217099948:elastic-ip/eipalloc-02bb3ee0009a3b005",
            "association_id": "eipassoc-09c2233595bb19e9f",
            "domain": "vpc",
            "id": "eipalloc-02bb3ee0009a3b005",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0808e3d65b01dcbbb",
            "private_dns": "ip-10-0-0-244.us-west-2.compute.internal",
            "private_ip": "10.0.0.244",
            "public_dns": "ec2-52-38-172-245.us-west-2.compute.amazonaws.com",
            "public_ip": "52.38.172.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-nat",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-nat",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.workshop_vpc",
            "aws_eks_cluster.ai_sre_demo",
            "aws_lambda_function.retroboard_slack_alerts",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_aidevops_test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029a761f237195c2c",
            "arn": "arn:aws:ec2:us-west-2:180217099948:instance/i-07306f78f234c47e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07306f78f234c47e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS-AIDevOps-test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4d2a7fbd90d82a6",
            "private_dns": "ip-10-0-1-65.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-52-33-231-249.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.231.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f85be63c58607519",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c88d237ad1545753",
            "tags": {
              "Name": "AWS-AIDevOps-Test-Instance",
              "Purpose": "AWS-AIDevOps-Testing"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-Test-Instance",
              "Purpose": "AWS-AIDevOps-Testing"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3ae20de1f8d6d11"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_aidevops_test_key",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_security_group.aws_aidevops_test_sg",
            "aws_subnet.aws_aidevops_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i_0c7dcdb57b0253639",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d147d36f1041e1ac",
            "arn": "arn:aws:ec2:us-west-2:180217099948:instance/i-0c7dcdb57b0253639",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdaa",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CSIVolumeName": "pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "KubernetesCluster": "ai-sre-demo",
                  "Name": "ai-sre-demo-dynamic-pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "do-not-delete": "true",
                  "donotdelete": "true",
                  "ebs.csi.aws.com/cluster": "true",
                  "ebs.csi.aws.com/cluster-name": "ai-sre-demo",
                  "kubernetes.io/cluster/ai-sre-demo": "owned",
                  "kubernetes.io/created-for/pv/name": "pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "kubernetes.io/created-for/pvc/name": "data-redis-0",
                  "kubernetes.io/created-for/pvc/namespace": "platform",
                  "project": "ai-sre-demo"
                },
                "tags_all": {
                  "CSIVolumeName": "pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "KubernetesCluster": "ai-sre-demo",
                  "Name": "ai-sre-demo-dynamic-pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "do-not-delete": "true",
                  "donotdelete": "true",
                  "ebs.csi.aws.com/cluster": "true",
                  "ebs.csi.aws.com/cluster-name": "ai-sre-demo",
                  "kubernetes.io/cluster/ai-sre-demo": "owned",
                  "kubernetes.io/created-for/pv/name": "pvc-bc2745eb-a6d5-4760-9061-bab5a26425f5",
                  "kubernetes.io/created-for/pvc/name": "data-redis-0",
                  "kubernetes.io/created-for/pvc/namespace": "platform",
                  "project": "ai-sre-demo"
                },
                "throughput": 0,
                "volume_id": "vol-0b93631b31bbcd681",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-56cf3349-5bb2-9022-4bef-e20e7db46f38",
            "id": "i-0c7dcdb57b0253639",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "launch_template": [
              {
                "id": "lt-09941c90104dafb26",
                "name": "eks-56cf3349-5bb2-9022-4bef-e20e7db46f38",
                "version": "1"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dfd1260da2b434aa",
            "private_dns": "ip-10-0-11-217.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098dbf38a8bd23dc9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "secondary_private_ips": [
              "10.0.11.144",
              "10.0.11.21",
              "10.0.11.241",
              "10.0.11.42",
              "10.0.11.44"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf98b66db21a26d1",
            "tags": {
              "do-not-delete": "true",
              "donotdelete": "true",
              "eks:cluster-name": "ai-sre-demo",
              "eks:nodegroup-name": "ai-sre-demo-nodes",
              "k8s.io/cluster-autoscaler/ai-sre-demo": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "tags_all": {
              "do-not-delete": "true",
              "donotdelete": "true",
              "eks:cluster-name": "ai-sre-demo",
              "eks:nodegroup-name": "ai-sre-demo-nodes",
              "k8s.io/cluster-autoscaler/ai-sre-demo": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089d2e112f21c23e9"
            ]
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_instance_profile.eks_56cf3349_5bb2_9022_4bef_e20e7db46f38",
            "aws_subnet.ai_sre_demo_private_1",
            "aws_security_group.eks_cluster_sg_ai_sre_demo_1803631249",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_eks_cluster.ai_sre_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "i_0fc94a6b0e1a6e72c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d147d36f1041e1ac",
            "arn": "arn:aws:ec2:us-west-2:180217099948:instance/i-0fc94a6b0e1a6e72c",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdaa",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "CSIVolumeName": "pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "KubernetesCluster": "ai-sre-demo",
                  "Name": "ai-sre-demo-dynamic-pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "do-not-delete": "true",
                  "donotdelete": "true",
                  "ebs.csi.aws.com/cluster": "true",
                  "ebs.csi.aws.com/cluster-name": "ai-sre-demo",
                  "kubernetes.io/cluster/ai-sre-demo": "owned",
                  "kubernetes.io/created-for/pv/name": "pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "kubernetes.io/created-for/pvc/name": "data-postgres-0",
                  "kubernetes.io/created-for/pvc/namespace": "platform",
                  "project": "ai-sre-demo"
                },
                "tags_all": {
                  "CSIVolumeName": "pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "KubernetesCluster": "ai-sre-demo",
                  "Name": "ai-sre-demo-dynamic-pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "do-not-delete": "true",
                  "donotdelete": "true",
                  "ebs.csi.aws.com/cluster": "true",
                  "ebs.csi.aws.com/cluster-name": "ai-sre-demo",
                  "kubernetes.io/cluster/ai-sre-demo": "owned",
                  "kubernetes.io/created-for/pv/name": "pvc-c8a0e9f3-3510-4ab6-b93d-b9098fdf3a7e",
                  "kubernetes.io/created-for/pvc/name": "data-postgres-0",
                  "kubernetes.io/created-for/pvc/namespace": "platform",
                  "project": "ai-sre-demo"
                },
                "throughput": 0,
                "volume_id": "vol-02d796c946d816c32",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "eks-56cf3349-5bb2-9022-4bef-e20e7db46f38",
            "id": "i-0fc94a6b0e1a6e72c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "launch_template": [
              {
                "id": "lt-09941c90104dafb26",
                "name": "eks-56cf3349-5bb2-9022-4bef-e20e7db46f38",
                "version": "1"
              }
            ],
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04d44a248f8560fd7",
            "private_dns": "ip-10-0-10-24.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0087e51801796b6ea",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "secondary_private_ips": [
              "10.0.10.117",
              "10.0.10.121",
              "10.0.10.145",
              "10.0.10.231",
              "10.0.10.82"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0502e3b29ddbc5a61",
            "tags": {
              "do-not-delete": "true",
              "donotdelete": "true",
              "eks:cluster-name": "ai-sre-demo",
              "eks:nodegroup-name": "ai-sre-demo-nodes",
              "k8s.io/cluster-autoscaler/ai-sre-demo": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "tags_all": {
              "do-not-delete": "true",
              "donotdelete": "true",
              "eks:cluster-name": "ai-sre-demo",
              "eks:nodegroup-name": "ai-sre-demo-nodes",
              "k8s.io/cluster-autoscaler/ai-sre-demo": "owned",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-089d2e112f21c23e9"
            ]
          },
          "dependencies": [
            "aws_security_group.eks_cluster_sg_ai_sre_demo_1803631249",
            "aws_subnet.ai_sre_demo_private_0",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_eks_cluster.ai_sre_demo",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_instance_profile.eks_56cf3349_5bb2_9022_4bef_e20e7db46f38",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_testing_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06af99ca40d168b3b",
            "arn": "arn:aws:ec2:us-west-2:180217099948:instance/i-0c0d6ac966ee1737d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-testing-ssm-profile",
            "id": "i-0c0d6ac966ee1737d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "local-mac-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d2dc8127a76dc7f9",
            "private_dns": "ip-10-0-1-195.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-54-245-11-169.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.11.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0870ad051d120b03f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08b28a6fc070e3487",
            "tags": {
              "Name": "Terraform-Testing-Env"
            },
            "tags_all": {
              "Name": "Terraform-Testing-Env"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0999c1cfa9344bb06"
            ]
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_security_group.terraform_testing_env_sg",
            "aws_iam_instance_profile.terraform_testing_ssm_profile",
            "aws_key_pair.local_mac_ssh_key",
            "aws_subnet.ai_sre_demo_public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ai_sre_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:internet-gateway/igw-071833f3abb385c8e",
            "id": "igw-071833f3abb385c8e",
            "owner_id": "180217099948",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "dependencies": [
            "aws_vpc.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_eks_cluster.ai_sre_demo",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_lambda_function.retroboard_slack_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_aidevops_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:internet-gateway/igw-0b2a31e01de323c10",
            "id": "igw-0b2a31e01de323c10",
            "owner_id": "180217099948",
            "tags": {
              "Name": "AWS-AIDevOps-IGW"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-IGW"
            },
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:internet-gateway/igw-02c1ecab69a1c2a3b",
            "id": "igw-02c1ecab69a1c2a3b",
            "owner_id": "180217099948",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "workshop_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:internet-gateway/igw-0fc548dd23a66c623",
            "id": "igw-0fc548dd23a66c623",
            "owner_id": "180217099948",
            "tags": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-igw",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-igw",
              "Project": "workshop",
              "do-not-delete": "true"
            }
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ai_sre_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02bb3ee0009a3b005",
            "association_id": "eipassoc-09c2233595bb19e9f",
            "connectivity_type": "public",
            "id": "nat-0004e04fd70cbfdc9",
            "network_interface_id": "eni-0808e3d65b01dcbbb",
            "private_ip": "10.0.0.244",
            "public_ip": "52.38.172.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-065df000346eca07d",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            }
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_eip.ai_sre_demo_nat",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_subnet.ai_sre_demo_public_0",
            "aws_eks_cluster.ai_sre_demo",
            "aws_lambda_function.retroboard_slack_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ai_sre_demo_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-05e72752af586e03b",
            "id": "rtb-05e72752af586e03b",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0004e04fd70cbfdc9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_nat_gateway.ai_sre_demo",
            "aws_eks_cluster.ai_sre_demo",
            "aws_vpc.ai_sre_demo",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_lambda_function.retroboard_slack_alerts",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ai_sre_demo_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-04b6a8b9e14d7c684",
            "id": "rtb-04b6a8b9e14d7c684",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071833f3abb385c8e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.ai_sre_demo",
            "aws_vpc.ai_sre_demo",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_lambda_function.retroboard_slack_alerts",
            "aws_internet_gateway.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_aidevops_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-0ed1587b1f1034dec",
            "id": "rtb-0ed1587b1f1034dec",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2a31e01de323c10",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWS-AIDevOps-Public-RT"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_internet_gateway.aws_aidevops_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_00d53d08f1765a46b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-00d53d08f1765a46b",
            "id": "rtb-00d53d08f1765a46b",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_03cda02ae77802074",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-03cda02ae77802074",
            "id": "rtb-03cda02ae77802074",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ai_sre_demo",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_04b00234d3effc208",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-04b00234d3effc208",
            "id": "rtb-04b00234d3effc208",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.workshop_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_0affc75d8b5f746ee",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-0affc75d8b5f746ee",
            "id": "rtb-0affc75d8b5f746ee",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c1ecab69a1c2a3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_internet_gateway.main_igw",
            "aws_launch_template.lt_09941c90104dafb26"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "workshop_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:route-table/rtb-086c7bea4a0641cbf",
            "id": "rtb-086c7bea4a0641cbf",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc548dd23a66c623",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-rt",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-rt",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.workshop_vpc",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_internet_gateway.workshop_igw",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_aidevops_test_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-0f3ae20de1f8d6d11",
            "description": "AWS AIDevOps beta testing security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3ae20de1f8d6d11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-aidevops-cpu-test-TestSecurityGroup-AaRJwoqh7c21",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "AWS-AIDevOps-Test-SG",
              "Purpose": "AWS-AIDevOps-Testing"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-Test-SG",
              "Purpose": "AWS-AIDevOps-Testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_lambda_function.retroboard_send_email",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_launch_template.lt_09941c90104dafb26"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg_ai_sre_demo_1803631249",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-089d2e112f21c23e9",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089d2e112f21c23e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg-ai-sre-demo-1803631249",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "eks-cluster-sg-ai-sre-demo-1803631249",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-ai-sre-demo-1803631249",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "owned",
              "project": "ai-sre-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_eks_cluster.ai_sre_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_07e6a004511fed45e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-07e6a004511fed45e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e6a004511fed45e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_lambda_function.retroboard_send_email",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_087a882b795afe148",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-087a882b795afe148",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087a882b795afe148",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_0b575c05f44b7716e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-0b575c05f44b7716e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b575c05f44b7716e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.workshop_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_0f6869c58b81b7469",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-0f6869c58b81b7469",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6869c58b81b7469",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_vpc.ai_sre_demo",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_testing_env_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-0999c1cfa9344bb06",
            "description": "Security group for Terraform testing EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999c1cfa9344bb06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-testing-env-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "terraform-testing-env-sg"
            },
            "tags_all": {
              "Name": "terraform-testing-env-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_lambda_function.retroboard_send_email",
            "aws_vpc.ai_sre_demo",
            "aws_launch_template.lt_09941c90104dafb26"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workshop_lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:security-group/sg-0196611e7b8d2f201",
            "description": "Security group for the Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0196611e7b8d2f201",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2000
              }
            ],
            "name": "workshop-lambda-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": null,
            "tags": {
              "Component": "application",
              "ManagedBy": "Terraform",
              "Name": "workshop-lambda-sg",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "application",
              "ManagedBy": "Terraform",
              "Name": "workshop-lambda-sg",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.workshop_vpc",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ai_sre_demo_private_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0502e3b29ddbc5a61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0502e3b29ddbc5a61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private-0",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private-0",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ai_sre_demo_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0bf98b66db21a26d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf98b66db21a26d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private-1",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-private-1",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_eks_cluster.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.ai_sre_demo",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ai_sre_demo_public_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-065df000346eca07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065df000346eca07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public-0",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public-0",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "dependencies": [
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_eks_cluster.ai_sre_demo",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ai_sre_demo_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-08b28a6fc070e3487",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b28a6fc070e3487",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public-1",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo-public-1",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true",
              "kubernetes.io/cluster/ai-sre-demo": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08addde25db60cdd3"
          },
          "dependencies": [
            "aws_vpc.ai_sre_demo",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_eks_cluster.ai_sre_demo",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_aidevops_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0c88d237ad1545753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c88d237ad1545753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-AIDevOps-Public-Subnet"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-Public-Subnet"
            },
            "vpc_id": "vpc-03aecb1e85e749ec9"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0f2016d38678a2692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2016d38678a2692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-05d72758e56287a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d72758e56287a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0d485f8dde566837e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d485f8dde566837e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-3"
            },
            "tags_all": {
              "Name": "private-subnet-3"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0cfbbde7c39abbee8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.31.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfbbde7c39abbee8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-4"
            },
            "tags_all": {
              "Name": "private-subnet-4"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.vpc_06cab6363775ce4b0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0318055baa738f353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0318055baa738f353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.vpc_06cab6363775ce4b0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-01aab6338303813c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aab6338303813c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-0d5e0f476083b7d6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e0f476083b7d6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_vpc.vpc_06cab6363775ce4b0",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-00bf20f9f86d0a6b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "172.31.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bf20f9f86d0a6b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-4"
            },
            "tags_all": {
              "Name": "public-subnet-4"
            },
            "vpc_id": "vpc-06cab6363775ce4b0"
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_vpc.vpc_06cab6363775ce4b0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workshop_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-037673c4c5b34bc86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037673c4c5b34bc86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-subnet-1",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-subnet-1",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "dependencies": [
            "aws_vpc.aws_aidevops_default_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.workshop_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "workshop_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:subnet/subnet-085a48c6f602378d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085a48c6f602378d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-subnet-2",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-public-subnet-2",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "vpc_id": "vpc-02814c9f8a44aee3d"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_vpc.workshop_vpc",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_vpc.aws_aidevops_default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ai_sre_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:vpc/vpc-08addde25db60cdd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e898c17ee3d3e18",
            "default_route_table_id": "rtb-03cda02ae77802074",
            "default_security_group_id": "sg-0f6869c58b81b7469",
            "dhcp_options_id": "dopt-0bb1f14359b70c893",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08addde25db60cdd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cda02ae77802074",
            "owner_id": "180217099948",
            "tags": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            },
            "tags_all": {
              "DoNotDelete": "true",
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "ai-sre-demo",
              "Project": "ai-sre-demo",
              "do-not-delete": "true",
              "donotdelete": "true"
            }
          },
          "dependencies": [
            "aws_lambda_function.retroboard_slack_alerts",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts",
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_aidevops_default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:vpc/vpc-03aecb1e85e749ec9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-068dbffd0ee391c34",
            "default_route_table_id": "rtb-00d53d08f1765a46b",
            "default_security_group_id": "sg-087a882b795afe148",
            "dhcp_options_id": "dopt-0bb1f14359b70c893",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03aecb1e85e749ec9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d53d08f1765a46b",
            "owner_id": "180217099948",
            "tags": {
              "Name": "AWS-AIDevOps-Default-VPC"
            },
            "tags_all": {
              "Name": "AWS-AIDevOps-Default-VPC"
            }
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_launch_template.lt_09941c90104dafb26",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_06cab6363775ce4b0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:vpc/vpc-06cab6363775ce4b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-03ab84330896569ef",
            "default_route_table_id": "rtb-0affc75d8b5f746ee",
            "default_security_group_id": "sg-07e6a004511fed45e",
            "dhcp_options_id": "dopt-0bb1f14359b70c893",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06cab6363775ce4b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0affc75d8b5f746ee",
            "owner_id": "180217099948"
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180217099948:vpc/vpc-02814c9f8a44aee3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c9867e48dddad0f",
            "default_route_table_id": "rtb-04b00234d3effc208",
            "default_security_group_id": "sg-0b575c05f44b7716e",
            "dhcp_options_id": "dopt-0bb1f14359b70c893",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02814c9f8a44aee3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b00234d3effc208",
            "owner_id": "180217099948",
            "tags": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-vpc",
              "Project": "workshop",
              "do-not-delete": "true"
            },
            "tags_all": {
              "Component": "network",
              "ManagedBy": "Terraform",
              "Name": "workshop-vpc",
              "Project": "workshop",
              "do-not-delete": "true"
            }
          },
          "dependencies": [
            "aws_iam_policy.arn_aws_iam__180217099948_policy_api_suite_automation_policy",
            "aws_sns_topic_policy.arn_aws_sns_us_west_2_180217099948_retroboard_alerts"
          ]
        }
      ]
    }
  ]
}